<resources>
    <string name="app_name">Warsaw Tour Guide App</string>
    <string name="nav_attractions">Attractions</string>
    <string name="nav_parks">Parks</string>
    <string name="nav_top_10_restaurants">TOP 10 restaurants</string>
    <string name="nav_summer_festivals">Summer Festivals</string>
    <string name="nav_drawer_header">Choose what do you want to visit</string>
    <string name="page_title_attractions">Attractions you must see at Warsaw</string>
    <string name="page_title_parks">Visit historical parks</string>
    <string name="page_title_restaurants">Eat in the best restaurants</string>
    <string name="page_title_festivals">Attend to popular summer festivals</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_park_fragment">Hello Parks fragment</string>
    <string name="hello_fest_fragment">Hello Festival fragment</string>
    <string name="hello_rest_fragment">Hello Restaurants fragment</string>
    <string name="warsaw_attraction_image_description">Warsaw Attraction</string>
    <string name="nav_home_screen">Home screen</string>
    <string name="nav_sub_menu">Navigate to:</string>
    <string name="address_label">Address:</string>
    <string name="opening_hours_label">Opening hours:</string>
    <string name="phone_number_label">Phone number:</string>
    <string name="when_label">When:</string>

    <string name="fest_1_name">Jazz na Starówce</string>
    <string name="fest_2_name">Orange Warsaw Festival</string>
    <string name="fest_3_name">Dreszer Jazz</string>
    <string name="fest_4_name">Summer Festival of the New Town</string>
    <string name="fest_5_name">Warsaw Summer Jazz Days 2018</string>
    <string name="fest_6_name">Summer Concerts at Grochowska Street 2018</string>
    <string name="fest_7_name">Singer’s Warsaw Festival 2018</string>
    <string name="fest_1_addr">Old Town Market Place</string>
    <string name="fest_2_addr">Służewiec Racetrack</string>
    <string name="fest_3_addr">Mokotów District</string>
    <string name="fest_4_addr">Śródmieście District</string>
    <string name="fest_5_addr">Stodoła Club, 10 Batorego St.</string>
    <string name="fest_6_addr">Sinfonia Varsovia, 272 Grochowska St.</string>
    <string name="fest_7_addr"><![CDATA[Śródmieście & Praga Districts]]></string>
    <string name="fest_1_date_from">July</string>
    <string name="fest_2_date_from">June</string>
    <string name="fest_3_date_from">July</string>
    <string name="fest_4_date_from">July</string>
    <string name="fest_5_date_from">5th July</string>
    <string name="fest_6_date_from">12th May</string>
    <string name="fest_7_date_from">August</string>
    <string name="fest_1_date_to">August</string>
    <string name="fest_3_date_to">August</string>
    <string name="fest_4_date_to">August</string>
    <string name="fest_5_date_to">8th July</string>
    <string name="fest_6_date_to">26th August</string>
    <string name="park_1_name">Mokotów Field</string>
    <string name="park_2_name">Saxon Garden</string>
    <string name="park_3_name">Ujazdów Park</string>
    <string name="park_4_name">Skaryszewski Park</string>
    <string name="park_5_name">Praga Park</string>
    <string name="park_6_name">Natolin Park</string>
    <string name="park_1_addr">Mokotów District</string>
    <string name="park_2_addr">Śródmieście District</string>
    <string name="park_3_addr">Śródmieście District</string>
    <string name="park_4_addr">Praga District</string>
    <string name="park_5_addr">Praga District</string>
    <string name="park_6_addr">Wilanów District</string>
    <string name="rest_1_name">San Thai</string>
    <string name="rest_2_name">Soto Sushi</string>
    <string name="rest_3_name">Amber Room</string>
    <string name="rest_4_name"><![CDATA[N31restaurant&bar]]></string>
    <string name="rest_5_name">Polska Różana</string>
    <string name="rest_6_name">Stolica</string>
    <string name="rest_7_name">Maho</string>
    <string name="rest_8_name">Mr India</string>
    <string name="rest_9_name">Hoża</string>
    <string name="rest_10_name">InAzia</string>
    <string name="rest_1_addr">10 Próżna St.</string>
    <string name="rest_2_addr">28 Waryńskiego St.</string>
    <string name="rest_3_addr">13 Ujazdowskie Av.</string>
    <string name="rest_4_addr">31 Nowogrodzka St.</string>
    <string name="rest_5_addr">7 Chocimska St.</string>
    <string name="rest_6_addr">1/3 Szeroki Dunaj St.</string>
    <string name="rest_7_addr">240/242 Krakowska St.</string>
    <string name="rest_8_addr">47 KEN Av.</string>
    <string name="rest_9_addr">25A Hoża St.</string>
    <string name="rest_10_addr">2 Bolesława Prusa St.</string>
    <string name="rest_1_phone">(+48) 577 607 775</string>
    <string name="rest_2_phone">(+48) 501 608 806</string>
    <string name="rest_3_phone">(+48 22) 523 66 64</string>
    <string name="rest_4_phone">(+48) 600 861 961</string>
    <string name="rest_5_phone">(+48 22) 848 12 25</string>
    <string name="rest_6_phone">(+48) 604 598 764</string>
    <string name="rest_7_phone">(+48 22) 609 15 48</string>
    <string name="rest_8_phone">(+48 22) 213 06 89</string>
    <string name="rest_9_phone">(+48) 515 037 001</string>
    <string name="rest_10_phone">(+48 22) 450 61 00</string>
    <string name="rest_1_hours">12 a.m. - 10 p.m.</string>
    <string name="rest_2_hours">12 a.m. - 10 p.m.</string>
    <string name="rest_3_hours">12 a.m. - 11 p.m.</string>
    <string name="rest_4_hours">12 a.m. - 11 p.m.</string>
    <string name="rest_5_hours">12 a.m. - 12 p.m.</string>
    <string name="rest_6_hours">11 a.m. - 11 p.m.</string>
    <string name="rest_7_hours">10 a.m. - 11 p.m.</string>
    <string name="rest_8_hours">11 a.m. - 10 p.m.</string>
    <string name="rest_9_hours">1 p.m. - 11 p.m.</string>
    <string name="rest_10_hours">5 p.m. - 11 p.m.</string>
    <string name="attr_1_name">The Royal Castle</string>
    <string name="attr_2_name">Museum of the History of the Polish Jews</string>
    <string name="attr_3_name">The Warsaw Rising Museum</string>
    <string name="attr_4_name">King Jan III\'s Palace at Wilanów</string>
    <string name="attr_5_name">The Royal Łazienki - Gardens</string>
    <string name="attr_6_name">The Fryderyk Chopin Museum in Warsaw</string>
    <string name="attr_7_name">Copernicus Science Centre</string>
    <string name="attr_8_name">The Palace of Culture and Science - Viewing Terrace</string>
    <string name="attr_1_addr">4 Zamkowy Sq.</string>
    <string name="attr_2_addr">6 Anielewicza St.</string>
    <string name="attr_3_addr">79 Grzybowska St.</string>
    <string name="attr_4_addr">10/16 Stanislawa Kostki Potockiego St.</string>
    <string name="attr_5_addr">1 Agrykoli St.</string>
    <string name="attr_6_addr">1 Okólnik St.</string>
    <string name="attr_7_addr">20 Wybrzeże Kościuszkowskie St.</string>
    <string name="attr_8_addr">1 Defilad Sq.</string>
    <string name="attr_1_phone">(+48 22) 35 55 170</string>
    <string name="attr_2_phone">(+48 22) 47 10 301</string>
    <string name="attr_3_phone">(+48 22) 539 79 37</string>
    <string name="attr_4_phone">(+48 22) 54 42 700</string>
    <string name="attr_5_phone">(+48 22) 50 60 028</string>
    <string name="attr_6_phone">(+48 22) 441 62 51</string>
    <string name="attr_7_phone">(+48 22) 596 41 00</string>
    <string name="attr_8_phone">(+48 22) 22 656 76 00</string>
    <string name="attr_1_hours">11 a.m. - 6 p.m.</string>
    <string name="attr_2_hours">10 a.m. - 6 p.m.</string>
    <string name="attr_3_hours">10 a.m. - 6 p.m.</string>
    <string name="attr_4_hours">9:30 a.m. - 4 p.m.</string>
    <string name="attr_5_hours">9 a.m. - 9 p.m.</string>
    <string name="attr_6_hours">11 a.m. - 8 p.m.</string>
    <string name="attr_7_hours">10 a.m. - 6 p.m.</string>
    <string name="attr_8_hours">10 a.m. - 8 p.m.</string>
</resources>
