<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/app_padding_standard"
    android:paddingTop="@dimen/app_padding_standard">

    <ImageView
        android:id="@+id/item_image_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_image_height"
        android:layout_marginLeft="@dimen/app_padding_standard"
        android:layout_marginRight="@dimen/app_padding_standard"
        android:contentDescription="@string/warsaw_attraction_image_description"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/item_name_padding"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            tools:text="Warsaw Uprising Museum" />

        <LinearLayout
            style="@style/itemSection">

            <TextView
                android:id="@+id/item_address_label"
                style="@style/itemLabel"
                android:text="@string/address_label"/>

            <TextView
                android:id="@+id/item_address_text_view"
                style="@style/itemValue"
                tools:text="Warsaw, Elektoralna 8 St." />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/opening_hours_section"
            style="@style/itemSection">

            <TextView
                android:id="@+id/item_opening_hours_label"
                style="@style/itemLabel"
                android:text="@string/opening_hours_label"/>

            <TextView
                android:id="@+id/item_opening_hours_text_view"
                style="@style/itemValue"
                tools:text="10:00 - 20:00" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_number_section"
            style="@style/itemSection">

            <TextView
                android:id="@+id/item_phone_number_label"
                style="@style/itemLabel"
                android:text="@string/phone_number_label" />

            <TextView
                android:id="@+id/item_phone_number_text_view"
                style="@style/itemValue"
                tools:text="10:00 - 20:00" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/when_festival_section"
            style="@style/itemSection">

            <TextView
                android:id="@+id/item_when_label"
                style="@style/itemLabel"
                android:text="@string/when_label" />

            <TextView
                android:id="@+id/item_when_text_view"
                style="@style/itemValue"
                tools:text="August 12th" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>